changes in customers module

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=dfb9d744bb6dbf59693b8e550582324e",
+    "/css/app.css": "/css/app.css?id=7ef89505cd455b297a0217853ba7d0e6"
 }
